--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -38,6 +38,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This notebook was made to be modular, in such a way that you can run only the section that you want. However, some sections may require the output of the previous section to work properly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Loading captions"
    ]
   },
@@ -176,22 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './data/processed_captions.txt\\\\processed_data.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[31], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# save the captions dictionary\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m save_captions_dic(captions_dic, \u001b[39m\"\u001b[39;49m\u001b[39m./data/processed_captions.txt\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "File \u001b[1;32mc:\\Users\\elaty\\OneDrive\\Documents\\Projects\\Caption Generation Using Deep Learning\\src\\utils\\data_utils.py:86\u001b[0m, in \u001b[0;36msave_captions_dic\u001b[1;34m(captions_dic, path)\u001b[0m\n\u001b[0;32m     82\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     83\u001b[0m \u001b[39mSave the captions dictionary to a json file\u001b[39;00m\n\u001b[0;32m     84\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     85\u001b[0m filename \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(path, \u001b[39m\"\u001b[39m\u001b[39mprocessed_data.json\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 86\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(filename, \u001b[39m\"\u001b[39;49m\u001b[39mw\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m     87\u001b[0m     json\u001b[39m.\u001b[39mdump(captions_dic, f)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './data/processed_captions.txt\\\\processed_data.json'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save the captions dictionary\n",
     "save_captions_dic(captions_dic, \"./data/\")"
