--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading captions"
+    "## 1 - Loading captions"
    ]
   },
   {
