--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "# load the annotation data\n",
-    "df = load_raw_captions_data(\"./data/captions.csv\")"
+    "df = load_raw_captions_data(\"./data/captions/captions.csv\")"
    ]
   },
   {
