prediction works, require further training

--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,9 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31783/31783 [00:00<00:00, 5863539.21it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# get the list of image names\n",
     "image_names = load_image_names(\"./data/images/\")"
@@ -317,9 +325,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading captions dictionary...\n",
+      "Loading tokenizer...\n",
+      "Loading features as a dictionary...\n"
+     ]
+    }
+   ],
    "source": [
     "# load the required data\n",
     "captions_dic = load_captions_dic(\"./data/captions/processed_captions.json\")\n",
@@ -337,9 +355,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31783/31783 [00:00<00:00, 283446.16it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# split the data into train and validation sets\n",
     "data_splitter = DataSplitter(\n",
@@ -352,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,9 +402,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_1\"\n",
+      "__________________________________________________________________________________________________\n",
+      " Layer (type)                   Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      " input_2 (InputLayer)           [(None, 2048)]       0           []                               \n",
+      "                                                                                                  \n",
+      " dropout (Dropout)              (None, 2048)         0           ['input_2[0][0]']                \n",
+      "                                                                                                  \n",
+      " dense (Dense)                  (None, 1024)         2098176     ['dropout[0][0]']                \n",
+      "                                                                                                  \n",
+      " dropout_1 (Dropout)            (None, 1024)         0           ['dense[0][0]']                  \n",
+      "                                                                                                  \n",
+      " input_3 (InputLayer)           [(None, 78)]         0           []                               \n",
+      "                                                                                                  \n",
+      " dense_1 (Dense)                (None, 512)          524800      ['dropout_1[0][0]']              \n",
+      "                                                                                                  \n",
+      " embedding (Embedding)          (None, 78, 256)      4681984     ['input_3[0][0]']                \n",
+      "                                                                                                  \n",
+      " dropout_2 (Dropout)            (None, 512)          0           ['dense_1[0][0]']                \n",
+      "                                                                                                  \n",
+      " dropout_3 (Dropout)            (None, 78, 256)      0           ['embedding[0][0]']              \n",
+      "                                                                                                  \n",
+      " dense_2 (Dense)                (None, 256)          131328      ['dropout_2[0][0]']              \n",
+      "                                                                                                  \n",
+      " lstm (LSTM)                    (None, 256)          525312      ['dropout_3[0][0]']              \n",
+      "                                                                                                  \n",
+      " add_12 (Add)                   (None, 256)          0           ['dense_2[0][0]',                \n",
+      "                                                                  'lstm[0][0]']                   \n",
+      "                                                                                                  \n",
+      " dense_3 (Dense)                (None, 256)          65792       ['add_12[0][0]']                 \n",
+      "                                                                                                  \n",
+      " dense_4 (Dense)                (None, 18289)        4700273     ['dense_3[0][0]']                \n",
+      "                                                                                                  \n",
+      "==================================================================================================\n",
+      "Total params: 12,727,665\n",
+      "Trainable params: 12,727,665\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n",
+      "None\n",
+      "You must install pydot (`pip install pydot`) and install graphviz (see instructions at https://graphviz.gitlab.io/download/) for plot_model to work.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "446/446 [==============================] - 279s 616ms/step - loss: 4.9542 - val_loss: 4.1081\n",
+      "Epoch 2/10\n",
+      "446/446 [==============================] - 275s 616ms/step - loss: 3.8804 - val_loss: 3.7796\n",
+      "Epoch 3/10\n",
+      "446/446 [==============================] - 273s 611ms/step - loss: 3.5923 - val_loss: 3.6426\n",
+      "Epoch 4/10\n",
+      "446/446 [==============================] - 274s 614ms/step - loss: 3.4215 - val_loss: 3.5671\n",
+      "Epoch 5/10\n",
+      "446/446 [==============================] - 272s 609ms/step - loss: 3.2954 - val_loss: 3.5241\n",
+      "Epoch 6/10\n",
+      "446/446 [==============================] - 273s 612ms/step - loss: 3.1949 - val_loss: 3.4946\n",
+      "Epoch 7/10\n",
+      "446/446 [==============================] - 266s 595ms/step - loss: 3.1103 - val_loss: 3.4867\n",
+      "Epoch 8/10\n",
+      "446/446 [==============================] - 273s 612ms/step - loss: 3.0393 - val_loss: 3.4789\n",
+      "Epoch 9/10\n",
+      "446/446 [==============================] - 264s 591ms/step - loss: 2.9768 - val_loss: 3.4906\n",
+      "Epoch 10/10\n",
+      "446/446 [==============================] - 278s 622ms/step - loss: 2.9230 - val_loss: 3.4903\n"
+     ]
+    }
+   ],
    "source": [
     "# train the model\n",
     "model.fit(\n",
@@ -391,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +554,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading tokenizer...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load the tokenizer\n",
+    "tokenizer = load_tokenizer(\"./data/tokenizer/tokenizer.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,14 +591,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:00<00:00, 122.03it/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 117.24it/s]\n"
      ]
     }
    ],
@@ -482,60 +609,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 5s 5s/step\n"
+      "100%|██████████| 78/78 [00:06<00:00, 11.28it/s]\n"
      ]
-    }
-   ],
-   "source": [
-    "# run the model on the test images\n",
-    "captions = model.predict([test_images, np.zeros((len(test_images), 78))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading tokenizer...\n",
-      "\n",
-      "\n",
+      "start sized dog with a dishtowel in its mouth and a white dog is looking at the camera and a white dog is in the background with a white dog in its mouth and a white dog in a blue shirt and a white dog in a blue shirt and a white and white dog in a bathroom with a white dog in its mouth and a white dog in a blue shirt and a white and white dog\n",
+      "79\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 78/78 [00:06<00:00, 12.01it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start a surfer in a black wetsuit and a man in a black shirt and black shorts are surfing in a lake in the ocean with a man in a black shirt and blue jeans and a man in a black shirt and black pants surfing in the ocean in the ocean with a wave in the background and the sun in the background is in the background and the man is in the water and the man is\n",
+      "79\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 78/78 [00:06<00:00, 11.53it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start the dog is running in the water with a stick in its mouth and a stick in its mouth is running in the water with a stick in its mouth in the background and a black dog in the water with a stick in its mouth and a black dog in the background with a stick in its mouth and a black dog in the background with a stick in its mouth and a black dog in the\n",
+      "79\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n"
      ]
     }
    ],
    "source": [
-    "# convert the captions to text from scratch\n",
-    "tokenizer = load_tokenizer(\"./data/tokenizer/tokenizer.pkl\")\n",
-    "captions = convert_captions_to_text(captions, tokenizer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print the captions\n",
-    "print(captions)"
+    "for image in test_images:\n",
+    "    cap = generate_desc(\n",
+    "        model=model,\n",
+    "        tokenizer=tokenizer,\n",
+    "        image=image,\n",
+    "        max_length=get_max_length(captions_dic)\n",
+    "    )\n",
+    "    print(cap)\n",
+    "    print(len(cap.split()))"
    ]
   }
  ],
